ra-gui: fix eclipse warnings